--- a/lib/phx_test_web/live/user_live/form_component.html.leex
+++ b/lib/phx_test_web/live/user_live/form_component.html.leex
@@ -10,5 +10,32 @@
   <%= text_input f, :name %>
   <%= error_tag f, :name %>
 
+  <%= label f, :colors %>
+
+  <%= for fc <- inputs_for(f, :colors) do %>
+    <%= label fc, :display_name %>
+    <%= text_input fc, :display_name %>
+    <%= error_tag fc, :display_name %>
+
+    <%= label fc, :hex_code %>
+    <%= text_input fc, :hex_code %>
+    <%= error_tag fc, :hex_code %>
+
+    <a
+      class="button"
+      phx-target="<%= @myself %>"
+      phx-click="remove_color"
+      phx-value-id="<%= fc.id %>"
+    >Remove</a>
+  <% end %>
+
+  <div>
+    <a
+      class="button"
+      phx-target="<%= @myself %>"
+      phx-click="add_color"
+    >Add Color</a>
+  </div>
+
   <%= submit "Save", phx_disable_with: "Saving..." %>
 </form>
